--- a/packages/intents/play_media_on_mass.yaml
+++ b/packages/intents/play_media_on_mass.yaml
@@ -11,9 +11,38 @@ intent_script:
       - variables:
           decorate_data:
             enqueue: replace
-      - action: mass.play_media
-        data: "{{ dict(media_data, **decorate_data) }}"
-        target:
-          area_id: "{{area_id(area)}}"
+            radio_mode: true
+      - choose:
+          - conditions:
+              - condition: template
+                value_template: '{{media_data.media_type in ["artist","album"]}}'
+            sequence:
+              - variables:
+                  decorate_data:
+                    enqueue: replace
+              - action: music_assistant.play_media
+                data: "{{ dict(media_data, **decorate_data) }}"
+                target:
+                  area_id: "{{area_id(area)}}"
+              - variables:
+                  decorate_data:
+                    enqueue: add
+                    radio_mode: true
+              - action: music_assistant.play_media
+                data: "{{ dict(media_data, **decorate_data) }}"
+                target:
+                  area_id: "{{area_id(area)}}"
+          - conditions:
+              - condition: template
+                value_template: '{{media_data.media_type in ["track"]}}'
+            sequence:
+              - variables:
+                  decorate_data:
+                    enqueue: replace
+                    radio_mode: true
+              - action: music_assistant.play_media
+                data: "{{ dict(media_data, **decorate_data) }}"
+                target:
+                  area_id: "{{area_id(area)}}"
     speech:
       text: "D'accord"
