--- a/scripts.yaml
+++ b/scripts.yaml
@@ -1252,3 +1252,61 @@ quitter_la_maison:
     enabled: true
   description: ''
   icon: mdi:home-export-outline
+recuperer_previsions_meteorologiques_horaires:
+  alias: Récupérer prévisions météorologiques horaires
+  sequence:
+  - action: weather.get_forecasts
+    target:
+      entity_id:
+      - weather.floirac
+    data:
+      type: hourly
+    response_variable: result
+  - stop: ''
+    response_variable: result
+  description: Récupérer les prévisions météorologiques horaires a mon domicile
+  icon: mdi:weather-cloudy
+recuperer_previsions_meteorologiques_journalieres:
+  alias: Récupérer prévisions météorologiques journalières
+  sequence:
+  - action: weather.get_forecasts
+    target:
+      entity_id:
+      - weather.floirac
+    data:
+      type: daily
+    response_variable: result
+  - stop: ''
+    response_variable: result
+  description: Récupérer les prévisions météorologiques journalières a mon domicile
+  icon: mdi:weather-cloudy
+recuperer_reunions_professionnelles:
+  alias: 'Récupérer Réunions Professionnelles  '
+  sequence:
+  - action: calendar.get_events
+    target:
+      entity_id:
+      - calendar.nabucasa_calendar_personal
+    data_template:
+      start_date_time: '{{ today_at(''00:00'') }}'
+      duration:
+        hours: 48
+    response_variable: result
+  - stop: ''
+    response_variable: result
+  description: Récupérer les réunions depuis mon calendrier professionnel
+  icon: mdi:laptop-account
+recuperer_liste_de_course:
+  alias: Récupérer liste de course
+  sequence:
+  - action: todo.get_items
+    target:
+      entity_id:
+      - todo.listes_des_courses
+    response_variable: result
+    data:
+      status: needs_action
+  - stop: ''
+    response_variable: result
+  description: Récupérer les éléments de ma liste de course
+  icon: mdi:basket
